<resources>
    <string name="app_name">MUX</string>
    <string name="startScreenImage">Image Loaded at the start of the App</string>
    <string name="startButtonText">Start My Sesh</string>
    <string name="title_activity_workout_options">WorkoutOptions</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="plank_attack_1m_on_30_sec_break">Plank Attack: 1M on/30 sec break</string>
    <string name="_100_100_100_challenge">100/100/100 Challenge</string>
    <string name="tabata">TABATA</string>
    <string name="hold_2m_on_45_sec_off">Hold! (2M on, 45 sec off)</string>
    <string name="create_my_own_workout">Create my own Workout</string>
</resources>
